--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/lz-string": "^1.3.34",
     "@vue/compiler-sfc": "^3.1.5",
     "autoprefixer": "^10.3.1",
     "lorem-ipsum": "^2.0.3",
@@ -19,14 +20,16 @@
     "vite-plugin-pages": "^0.15.1",
     "vite-plugin-pwa": "^0.10.0",
     "vite-plugin-solid": "^2.0.0",
+    "vite-tsconfig-paths": "^3.3.14",
     "workbox-window": "^6.2.2"
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.20.0",
     "crypto-js": "^4.1.1",
+    "lz-string": "^1.4.4",
     "solid-app-router": "^0.1.2",
     "solid-js": "^1.1.1",
-    "solid-masonry": "0.1.2",
+    "solid-masonry": "0.1.6",
     "sort-route-paths": "^1.0.0"
   }
 }
